<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvEquation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_equation_layout_height"
        android:gravity="end"
        android:textSize="@dimen/btnEquationTextSize"
        android:textColor="@color/black"
        tools:text="Result"
        android:autoSizeTextType="uniform"
        android:autoSizePresetSizes="@array/equation_auto_size_values"
        android:enabled="false"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_result_layout_height"
        android:gravity="end"
        android:textSize="@dimen/btnResultTextSize"
        android:autoSizeTextType="uniform"
        android:autoSizePresetSizes="@array/result_auto_size_values"
        tools:text="Result"
        android:enabled="false"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="6"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/btnOpenBracket"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/open_bracket"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnClosedBracket"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/closed_bracket"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/clear"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/divide"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/multiply"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/delete"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/seven"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/eight"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/nine"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/minus"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/four"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/five"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/six"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/plus"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/one"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/two"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/three"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowSpan="2"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/equal"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:text="@string/zero"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/dot"
            android:textSize="@dimen/btnTextSize" />

    </GridLayout>
</LinearLayout>